samples/_failures_safe/1761246233_9cd660_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d72256c9.c: In function ‘main’:
./samples/SAFE/__tmp_d72256c9.c:165:25: error: missing terminating " character
  165 |         fprintf(stderr, "Error
      |                         ^~~~~~
./samples/SAFE/__tmp_d72256c9.c:165:9: error: expected expression at end of input
  165 |         fprintf(stderr, "Error
      |         ^~~~~~~
./samples/SAFE/__tmp_d72256c9.c:165:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d72256c9.c:165:9: error: expected declaration or statement at end of input
